syntax = "proto3";

package com.salty.protos;

import "entity.proto";

option java_multiple_files = true;

/* [USER] */
// user service
service ContactService {
    //请求添加好友
    rpc RequestContact (GrpcReq) returns (GrpcResp) {
    }

    //拒绝添加好友，同时可以输入拒绝的原因
    rpc RefusedContact (GrpcReq) returns (GrpcResp) {
    }

    //同意添加
    rpc AcceptContact (GrpcReq) returns (GrpcResp) {
    }

    //删除好友
    rpc DeleteContact (GrpcReq) returns (GrpcResp) {
    }

    //更新好友备注信息
    rpc UpdateRemarkInfo (GrpcReq) returns (GrpcResp) {
    }
}

message RequestContactReq {
    string userId = 1;
    string reason = 2;
}

message RequestContactResp {

}

message RefusedContactReq {
    string userId = 1;
    string reason = 2;
}

message RefusedContactResp {

}

message AcceptContactReq {
    string userId = 1;
}

message AcceptContactResp {

}

message DeleteContactReq {
    string userId = 1;
}

message DeleteContactResp {

}

message UpdateRemarkInfoReq {
    string userId = 1;
    ContactRemark remarkInfo = 2;
}

message UpdateRemarkInfoResp {

}
